like/unlike funkció

--- a/css/home.css
+++ b/css/home.css
@@ -1,7 +1,7 @@
+/* alap beállítások */
 :root {
     --text-color: #17BD3E;
 }
-
 
 * {
     margin: 0;
@@ -14,9 +14,9 @@ html {
     background-color: silver;
 }
 
-/*asd*/
+/* ----- a fejléc a menüvel ----- */
 header {
-    background-color: whitesmoke;
+    background-color: white;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -30,12 +30,11 @@ header {
     user-select: none;
 }
 
-
 .menu-logo-green {
     color: var(--text-color);
 }
 
-/* menü alapállapot */
+/*  menü alapállapotban */
 nav {
     display: flex;
     gap: 2rem;
@@ -47,10 +46,10 @@ nav a {
     color: black;
     width: 60px;
     height: 60px;
+    border-radius: 50%;
+    display: flex;
     justify-content: center;
     align-items: center;
-    display: flex;
-    border-radius: 50%;
     transition: ease 500ms;
 }
 
@@ -63,16 +62,14 @@ nav a:hover {
 }
 
 .icon-logout {
-    background-color: purple;
+    background-color: red;
     color: white;
-
 }
 
-
-/*hamburger*/
-.hamburger-menu{
-    background-color: whitesmoke;
-    width: 60px;
+/* hamburger menü */
+.hamburger-menu {
+    background-color: white;
+    width: 30px;
     height: 25px;
     display: none;
     flex-direction: column;
@@ -81,12 +78,11 @@ nav a:hover {
 }
 
 .hamburger-menu span {
-    display: flex;
+    display: block;
     height: 4px;
-    width: 10px;
+    width: 100%;
     border-radius: 2px;
-    background-color: purple;
-
+    background-color: black;
 }
 
 .menu-toggle {
@@ -97,11 +93,34 @@ nav a:hover {
     display: flex;
 }
 
-/* hamburger menü plusz gomb*/
+/* --- hozzáadás plus gomb --- */
+.fixed {
+    position: fixed;
+    right: 30px;
+    top: 70%;
+    background-color: var(--text-color);
+    width: 60px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    cursor: pointer;
+    z-index: 1000;
+    transition: ease 0.5s;
+}
 
+.fixed:hover {
+    transform: scale(1.1);
+}
 
+.fixed>i {
+    color: white;
+    font-size: 2.5rem;
+}
 
-@media screen and (max-width: 786px) {
+/* --- hamburger menü, plus gomb 768px-től --- */
+@media screen and (max-width: 768px) {
     .hamburger-menu {
         display: flex;
     }
@@ -110,7 +129,7 @@ nav a:hover {
         flex-direction: row;
         justify-content: space-around;
         width: 100%;
-        background-color: whitesmoke;
+        background-color: white;
         padding: 10px;
         position: absolute;
         top: 70px;
@@ -124,37 +143,140 @@ nav a:hover {
         height: 40px;
     }
 
-    .fixed > i {
+    .fixed>i {
         font-size: 2rem;
     }
 }
 
-/*hozzáadás gomb*/
-
-
-.fixed{
-    position: fixed;
-    right: 30px;
-    top: 70%;
-    background-color: var(--text-color);
-    height: 60px;
-    width: 60px;
-    align-items: center;
-    justify-content: center;
+/* sorminta */
+.row {
     display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: space-evenly;
+}
+
+/* kártyák */
+.card {
+    flex: 0 1 calc((100% - 40px) /5);
+    /* flex-grow: 0 vagy 1 lehet, a 0-val letiltjuk, hogy a kártya növekedhessen */
+    /* flex-shrink: 1; 0 vagy 1 lehet, 1-el megengedjük, hogy a kártyát lehessen kicsinyíteni */
+    /* flex-basis: calc((100% - 40px) /5); Ez a kiinduló szélességt, amit a böngésző megpróbál fentartani a kártyának */
+    background-color: white;
+    border: 1px solid #E0E0E0;
+    border-radius: 1.25rem;
+    box-shadow: 0 2px 4px rgb(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+    overflow: hidden;
+    /* elrejtük a tartalom azon részét, ami kilóg */
+    transition: ease 0.5s;
+}
+
+.card:hover {
+    transform: scale(1.01);
+}
+
+.card img {
+    width: 100%;
+}
+
+/* kártya fejléc */
+.card-header {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 10px;
+    font-weight: bold;
+    font-size: 1rem;
+    background-color: inherit;
+}
+
+.card-header img {
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
-    cursor: pointer;
-    z-index: 1000;
+    object-fit: cover;
 }
 
-.fixed:hover {
-    transform: scale(1.1);
+/* kártya közepe */
+.card-body {
+    display: flex;
+    flex-grow: 1;
+    justify-content: center;
+    border-radius: inherit;
+    background-color: inherit;
+    overflow: hidden;
 }
 
-.fixed > i {
-    color: whitesmoke;
+.pic-div {
+    position: relative;
+    width: 100%;
+    padding-top: 100%;
+    border-radius: inherit;
+    background-color: white;
+    overflow: hidden;
+}
+
+.pic-div img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); /*  tökéletesen középre igazítja a képet a div-en belül */
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+    background-color: inherit;
+    border-radius: inherit;
+}
+
+/* kártya lábléce */
+.card-footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 10px;
+    background-color: inherit;
+}
+
+.card-footer span {
+    font-size: 3rem;
+    font-weight: bold;
+    color: #333333;
+    background-color: inherit;
+}
+
+.card-footer i {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
     font-size: 2.5rem;
+    cursor: pointer;
+    transition: ease 0.5s;
+}
+
+.card-footer i:hover {
+    transform: scale(1.01);
+}
+
+@media screen and (max-width: 850px) {
+    .card {
+        flex: 0 1 calc((100% - 40px) /2);
+    }
+}
+
+@media screen and (max-width: 426px) {
+    .card {
+        flex: 0 1 100%;
+    }
 }
 
 
-
+.like{
+    background-color: #17BD3E;
+    color: indianred;
+}
